samples/_failures_safe/1761563597_df68c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c23eb962.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_c23eb962.c:148:9: error: expected declaration or statement at end of input
  148 |         lexer_read_string(lexer, &token);
      |         ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c23eb962.c:148:9: error: expected declaration or statement at end of input
